<resources>
    <string name="app_name">乐购</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_about">关于</string>
    <string name="navigation_exit">退出</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_collect">收藏</string>
    <string name="navigation_home">首页</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="press_again_exit_app">再按一次退出程序</string>

    <string-array name="welcome_tip">
        <item>主人，奴婢在此等候多时了</item>
        <item>主人，近来一切可好</item>
        <item>主人,我来伺候你了</item>
        <item>欢迎归来，我亲爱的主人</item>
        <item>我是机器人，很高兴为您服务</item>
    </string-array>

    <string name="app_description"> 团购app,省钱利器,您值得拥有\n cqs设计</string>
    <string name="app_github_url">github地址：\n ghttps://github.com/wscqs/Legou</string>
    <!--<string name="app_github_url">github地址：\nhttps://github.com/chenyangcun/MaterialDesignExample</string>-->


    <!--二维码需要-->
    <string name="camera_open_notice">您已经开启了灯光！</string>
    <string name="camera_close_notice">您已经关闭了灯光！</string>
    <string name="camera_problem">抱歉，您相机出现问题。您可能需要重启设备。</string>
    <string name="framwork_problem">二维码扫描暂时出现问题。您重启再试。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="button_ok">确定</string>
    <string name="result_uri">网址路径</string>
    <string name="button_1">浏览器打开</string>
    <string name="button_2">内容</string>
    <string name="button_3">其它标题</string>
    <string name="result_title_default">网址路径</string>
    <string name="qrcode_notice">将二维码图案放在取景框内，即可自动扫描。</string>
    <string name="openorclose_light">打开或关闭灯光</string>
    <string name="qrcode_empty"></string>
    <string name="qrcode_open">用浏览器打开</string>
    <string name="paramete_error">参数正确，请重新扫描</string>

    <string name="quicklogin">快捷登录</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_category_goods">CategoryGoodsActivity</string>


</resources>
